--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#937d14</color>
     <color name="colorPrimaryDark">#0000ff</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="background">#eae7d9</color>
+    <color name="background">#EAE7D9</color>
 </resources>
